# imgdetector

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp  sqlitelib.h
.github/workflows/: cmake.yml
